--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.jesus.estudio.MainActivity">
 
     <TextView
@@ -14,11 +15,10 @@
         android:layout_marginTop="33dp"
         android:text="@string/text1"
         app:layout_constraintBottom_toTopOf="@+id/Btnarndemo"
-        app:layout_constraintHorizontal_bias="0.464"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.067" />
+        />
 
     <Button
         android:id="@+id/button"
@@ -27,20 +27,54 @@
         android:layout_marginBottom="50dp"
         android:layout_marginTop="55dp"
         android:text="Next"
-        app:layout_constraintBottom_toBottomOf="@+id/Btnarndemo"
-        app:layout_constraintEnd_toEndOf="@+id/Btnarndemo"
-        app:layout_constraintStart_toStartOf="@+id/Btnarndemo"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Btnarndemo"
-        android:layout_width="104dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="317dp"
-        android:layout_marginLeft="129dp"
-        android:text="ARN DEMO"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="110dp"
+        android:text="ARN demo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/Btnstate"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="170dp"
+        android:text="Estados"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/BtnBarcode"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="230dp"
+        android:text="Codigo barras"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Btnlights"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="290dp"
+        android:text="Animación de semáforo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
