--- a/app/src/main/res/layout/activity_scan_barcode.xml
+++ b/app/src/main/res/layout/activity_scan_barcode.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jesus.estudio.Screen2">
+    tools:context="com.example.jesus.estudio.Scan_barcode">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -17,11 +17,12 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="ANR example" />
+            app:title="Barcode DEMO"
+        />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_anr_example" />
+    <include layout="@layout/content_scan_barcode" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
