--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,5 +76,38 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/Btnsearch"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="350dp"
+        android:text="Busqueda web"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Btndice"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="410dp"
+        android:text="Dados"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/BtnMail"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="470dp"
+        android:text="Correo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
