--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,107 +7,112 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.jesus.estudio.MainActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/scrollview"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="86dp"
-        android:layout_marginTop="33dp"
-        android:text="@string/text1"
-        app:layout_constraintBottom_toTopOf="@+id/Btnarndemo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="55dp"
-        android:text="Next"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/Btnarndemo"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="110dp"
-        android:text="ARN demo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/text1"
+                app:layout_constraintBottom_toTopOf="@+id/Btnarndemo"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Next" />
+
+            <Button
+                android:id="@+id/Btnarndemo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ARN demo"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-    <Button
-        android:id="@+id/Btnstate"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="170dp"
-        android:text="Estados"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/Btnstate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Estados"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/BtnBarcode"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="230dp"
-        android:text="Codigo barras"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/BtnBarcode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Codigo barras"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/Btnlights"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="290dp"
-        android:text="Animación de semáforo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/Btnlights"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Animación de semáforo"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/Btnsearch"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="350dp"
-        android:text="Busqueda web"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/Btnsearch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Busqueda web"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/Btndice"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="410dp"
-        android:text="Dados"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/Btndice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Dados"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/BtnMail"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="470dp"
-        android:text="Correo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/BtnMail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Correo"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <Button
+                android:id="@+id/BtnList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lista"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
