--- a/app/src/main/res/layout/content_screen2.xml
+++ b/app/src/main/res/layout/content_screen2.xml
@@ -31,4 +31,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btnModal"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="176dp"
+        android:text="Modal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
